--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					preload="auto" /*autoplay="" loop="loop"></video>
 			</header>
 			<div class="main">
-				<div class="catalog" id="main_catalog" /*style="display: none">
+				<div class="catalog" id="main_catalog" style="display: none">
 					<h1 class="catalog__title">Главный экран</h1>
 					<div class="catalog__menu">
 						<button class="catalog__menu-button button-leader" id="button-leader">Вы в "Лидере"</button>
@@ -48,15 +48,17 @@
 					</div>
 				</div>
 				
-				<div class="catalog" id="leader_catalog" style="display: none">
+				<div class="catalog" id="leader_catalog" /*style="display: none">
 					<h1 class="catalog__title">Вы в "Лидере"</h1>
 					<div class="catalog__block">
 						<div class="catalog__block-menu">
 							<button class="button-left" id="button-leader">Главный экран</button>
 							<button class="button-left">Для детей и родителей</button>
 						</div>
-						<div class="window">
-							dfgdfh
+						<div class="catalog__block-window">
+							<h2 class="catalog__block-window__title">Для детей и родителей</h2>
+							<img src="http://80.94.174.67:10110/media/page_image/%D0%A1%D0%BB%D0%B0%D0%B9%D0%B41_Ek8bSsg.JPG" alt="1"
+								style="max-width: 100%; max-height: 100%">
 						</div>
 					</div>
 					
