--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					preload="auto" /*autoplay="" loop="loop"></video>
 			</header>
 			<div class="main">
-				<div class="catalog" id="main_catalog" style="display: none">
+				<div class="catalog" id="main_catalog" /*style="display: none">
 					<h1 class="catalog__title">Главный экран</h1>
 					<div class="catalog__menu">
 						<button class="catalog__menu-button button-leader" id="button-leader">Вы в "Лидере"</button>
@@ -48,7 +48,7 @@
 					</div>
 				</div>
 				
-				<div class="catalog" id="leader_catalog" /*style="display: none">
+				<div class="catalog" id="leader_catalog" style="display: none">
 					<h1 class="catalog__title">Вы в "Лидере"</h1>
 					<div class="catalog__block">
 						<div class="catalog__block-menu">
